# deepscan-model

./: .gitignore  Dockerfile  README.md  main.py  predict.py  pyproject.toml  test.py
.github/workflows/: sync-model-to-ios.yml
DeepScanClassifier.mlpackage/: Manifest.json
FishDetector.mlpackage/: Manifest.json
configs/: default.yaml
model/: testmodel.mlmodel
model/DeepScanClassifier.mlpackage/: Manifest.json
model/DeepScanClassifier.mlpackage/Data/com.apple.CoreML/: model.mlmodel
scripts/: compare_models.py  export_coreml.py  export_detector.py  plot_training.py  predict.py
src/: data.py  export.py  model.py  plotting.py  trainer.py  transforms.py
