[project]
name = "deepscan-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.10.0, <2.11.0",
    "torchvision>=0.25.0, <0.26.0",
    "pytorch-lightning>=2.5.0, <2.6.0",
    "datasets",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "setuptools>=81.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
