[project]
name = "deepscan-model"
version = "0.1.0"
description = "Image classification model for tropical reef fish species"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10.0,<2.12",
    "torchvision>=0.25.0,<0.27",
    "pytorch-lightning>=2.5.0, <2.6.0",
    "datasets",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "setuptools<81.0.0",
    "coremltools>=9.0",
    "python-dotenv>=1.2.2",
    "matplotlib>=3.10.9",
    "ultralytics>=8.4.47",
    "clip",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# CUDA wheels on Linux (training rigs); default PyPI on macOS (MPS-enabled).
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
